changing site meta data

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"name": "cara",
 	"description": "An exhibition of some of the projects I have worked.",
 	"version": "0.0.6",
-	"author": "LekoArts <hello@lekoarts.de>",
+	"author": "Nei Williams",
 	"license": "MIT",
 	"starter-name": "gatsby-starter-portfolio-cara",
 	"scripts": {
